integrate XML for req/res and update WireMock test mocks
