# src/main/java/it/gov/pagopa/mbd/gps/service/model/CtPaymentOptionsDescriptionListPA.java
@@ -1,0 +1,18 @@
+package it.gov.pagopa.mbd.gps.service.model;
+
+import jakarta.xml.bind.annotation.XmlAccessType;
+import jakarta.xml.bind.annotation.XmlAccessorType;
+import jakarta.xml.bind.annotation.XmlElement;
+import jakarta.xml.bind.annotation.XmlType;
+import lombok.Data;
+
+@Data
+@XmlAccessorType(XmlAccessType.FIELD)
+@XmlType(name = "ctPaymentOptionsDescriptionListPA", propOrder = {
+        "paymentOptionDescription"
+})
+public class CtPaymentOptionsDescriptionListPA {
+
+    @XmlElement(required = true)
+    private CtPaymentOptionDescriptionPA paymentOptionDescription;
+}
